--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -1,20 +1,18 @@
-.colbox{
-    background-color: white;
-    box-shadow: 0.6px 0.6px 2rem rgba(229, 147, 252, 0.20);
-    border-radius: 10px;
-    
+.colbox {
+  background-color: white;
+  box-shadow: 0.6px 0.6px 2rem rgba(30, 30, 31, 0.1);
+  border-radius: 10px;
 }
-.colbox:hover i,span{
-    transform: scale(1.1);
-    color:#e99f27;
+span {
+  text-shadow: 0.3px 0.3px 0.3px #e99f27;
+  color: #540640;
 }
-span{
-
-    transition-duration: .3s;
-    transition-property: transform;
+i {
+  font-size: 27px;
+  transition-duration: 0.3s;
+  transition-property: transform, color;
 }
-i{
-    font-size: 27px;
-    transition-duration: .3s;
-    transition-property: transform,color;
+.colbox:hover i {
+  transform: scale(1.1);
+  color: #e99f27;
 }
