--- a/src/Components/Contact.css
+++ b/src/Components/Contact.css
@@ -5,7 +5,7 @@
 }
 .contactbox{
   /* background: linear-gradient(to top left, rgb(248, 243, 252), rgb(242, 239, 250)) */
-
+background-color: rgb(251 255 255);
 }
 span {
   text-shadow: 0.3px 0.3px 0.3px #e99f27;
