--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-body{
+body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -10,7 +10,10 @@ input::-webkit-inner-spin-button {
   margin: 0;
 }
 
-
+.swal2-shown {
+  overflow: unset !important;
+  padding-right: 0px !important;
+}
 select.form-control {
   -webkit-appearance: menulist;
 }
